src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.spinner{
  height: 60px;
  width: 60px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.profile-image {
  height: 200px;
  width: 200px;
  background-color: white;
  overflow: visible;
} 



.background-image {
  color: white;
  border-radius: solid white 10px;
}

.overflow{
  overflow: visible; 
}



.icn-logo {
  display: block;
  width: 100%;
  text-align: center;
  padding-bottom: 4px;
}

.main-nav a {
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
}

/* .container {
  width: 95%;
  max-width: 780px;
  padding-bottom: 2em;
  margin: 0 auto 2em;
  background: gray;
  border-radius: .5em;
  box-shadow: 0 3px rgba(0, 0, 0, .1);
  overflow: hidden;
} */
.main-content {
  /* padding: 1em 2em; */
}

.home a {
  border-color: transparent;
}

.icon-images {

  height: 90px;
  display: block;
  text-align: center;
 display: inline-block;
 margin:10px;

} 

.image-box {
  /* padding:10px; */
  display: inline-block;
}

.image-title{
  width: 140px;
  height: 125px;
  padding-top: 5px;
  padding-bottom: 2px;
}

.activeSelected {
  color: 'black'
}

nav a.active{
  text-decoration: none;
  font-weight: bold;
  filter: brightness(80%);
  
}

.border-bottom{
  border-bottom: 5px solid white;
}
/* 
nav a.active:hover {
  color: none;
}

ul li.active{
  color: red;
} */

.crop {
  height: 300px;
  width: 400px;
  overflow: hidden;
 }
 .crop img {
  height: auto;
  width: 400px;
  background-size: cover;
 }

 /* .profile-card{
  width: 700px;
  height:600px;
} */

 /* .wrapper {
  width: 300px;
  height: 300px;
  background: gold;
} */

/* @media screen and (min-width: 200) and (max-width: 400px) {
  .profile-card{
  width: 100px;
  height:200px; 
  }

}

@media screen and (min-width: 400) and (max-width: 699px) {
  .profile-card{
  width: 700px;
  height:600px; 
  }
} */


/* @media screen and (min-width: 200)  {
  .profile-card{
  width: 200px;
  height:100px; 
  background-color: black;
  }
} */


/* 
@media screen and (min-width: 700px) {
  .profile-card{
  width: 500px;
  height:600px; 
  }
}

@media screen and (min-width: 1500px) {
  .profile-card{
  width: 700px;
  height:600px; 
  padding: 100px;
  }
} */

/* @media screen and (min-width: 200px) and (max-width: 1000px){
  .works-buttons{
  width: 100px;
  height: 20px;
  }
} */

